--- a/index.adoc
+++ b/index.adoc
@@ -13,5 +13,9 @@ Portland, Oregon.
 
 == What
 
-Embedded Systems.  Computer Vision.  Image Processing.
+Embedded Performance Optimization
+
+* ARM NEON
+* Compiler Optimizations
+* Halide
 
